objects/SFDC_Project_Member__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                    <default>true</default>
                    <label>Read</label>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Architect</fullName>
                </value>
                <value>
                    <fullName>Business Owner</fullName>
                </value>
                <value>
                    <fullName>Business Owner(backup)</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>IT Owner</fullName>
                </value>
                <value>
                    <fullName>IT Owner(backup)</fullName>
                </value>
                <value>
                    <fullName>IT Project Manager</fullName>
                </value>
                <value>
                    <fullName>IT Project Manager(backup)</fullName>
                </value>
                <value>
                    <fullName>Technical Architect</fullName>
                </value>
                <value>
                    <fullName>Tester</fullName>
                </value>
                <value>
                    <fullName>WWMS System &amp; Solution Owner</fullName>
                </value>
                <value>
                    <fullName>WWMS Systems &amp; Soluton Owner(backup)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Project__c</fullName>
        <label>SFDC Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>SFDC Project Members</relationshipLabel>
        <relationshipName>SFDC_Project_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Portfolio_Member_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SFDC Project Member</label>
    <nameField>
        <displayFormat>SPM-{0000}</displayFormat>
        <label>SFDC Portfolio Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Project Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>